# ag-tower

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: build.ps1
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CommandPalette.tsx  ThemeSwitcher.tsx  Toast.tsx
src/pages/: Agents.tsx  BrainSync.tsx  Dashboard.tsx  Deploy.tsx  DesignEditor.tsx  DocsHealth.tsx  Hooks.tsx  KnowledgeBases.tsx  McpManager.tsx  Memory.tsx  OfficeHours.tsx  Retro.tsx  RulesEditor.tsx  Settings.tsx  SkillsCatalog.tsx  SprintPipeline.tsx  WorkflowBrowser.tsx
