[package]
name = "ag-tower"
version = "0.1.0"
description = "Antigravity Control Tower — Manage your AI coding ecosystem"
authors = ["Quoc Nguyen"]
edition = "2021"

[lib]
name = "ag_tower_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hostname = "0.4"
dirs = "6"
